[gd_scene load_steps=8 format=3 uid="uid://dnt6447xrlcdl"]

[ext_resource type="Script" uid="uid://cdste0b2jq3lu" path="res://scripts/scenes/Projectile.gd" id="1_v4p2m"]
[ext_resource type="Texture2D" uid="uid://ciisvvvxqmk75" path="res://art/animations/projectile/enemy_projectile.png" id="2_16pva"]
[ext_resource type="PackedScene" uid="uid://jxxchqmb3p35" path="res://scenes/components/single_hitbox.tscn" id="2_si4br"]
[ext_resource type="AnimationLibrary" uid="uid://bh33una3g21qb" path="res://art/animations/libraries/projectiles_animation_library.res" id="3_mdedg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g5ryk"]
radius = 2.0

[sub_resource type="Animation" id="Animation_23lov"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_16pva")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xb3fw"]
_data = {
&"RESET": SubResource("Animation_23lov")
}

[node name="Projectile" type="RigidBody2D" groups=["Projectile"]]
z_index = 4
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
script = ExtResource("1_v4p2m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_g5ryk")

[node name="Sprite2D" type="Sprite2D" parent="."]
use_parent_material = true
texture = ExtResource("2_16pva")
hframes = 15

[node name="TimeToLive" type="Timer" parent="."]
one_shot = true

[node name="ProjectileAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xb3fw"),
"projectiles": ExtResource("3_mdedg")
}

[node name="Hitbox" parent="." instance=ExtResource("2_si4br")]

[connection signal="timeout" from="TimeToLive" to="." method="_on_time_to_live_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
